deployments/ingress-demo/nginx-deploy-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-main
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: front-end
        image: nginx
        ports:
          <F4> containerPort: 80
